syntax = "proto3";

option csharp_namespace = "TestTaskPlatform.gRPC_Client";

package translate;

service GrpcTranslate {
  rpc GetTranslate (TranslateRequest) returns (ListOfStrings);
  rpc GetInfo (Empty) returns (InfoReply);
}

message TranslateRequest {
  ListOfStrings text = 1;
  string langFrom = 2;
  string langTo = 3;
}

message ListOfStrings {
    repeated string strings=1;
}

message InfoReply {
  string info = 1;
}

message Empty {}